src/test/ui/borrowck/two-phase-multi-mut.stderr
error[E0499]: cannot borrow `foo` as mutable more than once at a time
  --> $DIR/two-phase-multi-mut.rs:11:5
   |
LL |     foo.method(&mut foo);
   |     ^^^^------^--------^
   |     |   |      |
   |     |   |      first mutable borrow occurs here
   |     |   first borrow later used by call
   |     second mutable borrow occurs here
   |
   = help: try adding a local storing the argument and then using the local in the call

error[E0499]: cannot borrow `foo` as mutable more than once at a time
  --> $DIR/two-phase-multi-mut.rs:11:16
   |
LL |     foo.method(&mut foo);
   |     --- ------ ^^^^^^^^ second mutable borrow occurs here
   |     |   |
   |     |   first borrow later used by call
   |     first mutable borrow occurs here
   |
   = help: try adding a local storing the argument and then using the local in the call

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0499`.
